--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
     "clarifai": "^2.6.0",
     "gh-pages": "^1.1.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-particles-js": "^2.1.0",
-    "react-scripts": "1.1.0",
-    "react-tilt": "^0.1.4",
-    "tachyons": "^4.9.1"
+    "react-dom": "^16.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
